--- a/Java/ch05-Intent/app/src/main/res/layout/activity_main.xml
+++ b/Java/ch05-Intent/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,14 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/tv_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="Hello World! Click ME!"
+        android:background="@color/black"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
